fix: adjust width of login title for better alignment

--- a/src/sass/_login_page.scss
+++ b/src/sass/_login_page.scss
@@ -83,7 +83,7 @@
     font-size: 26px;
     line-height: 31px;
     color: #000;
-    width: 159px;
+    width: 180px;
     height: 31px;
     text-align: center;
 }
